--- a/themes/neopost/layouts/_default/baseof.html
+++ b/themes/neopost/layouts/_default/baseof.html
@@ -37,7 +37,9 @@
     {{ partial "style.css" . }}
 
     <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" href="{{.Site.BaseURL }}index.xml" title="{{ .Site.Title }}">
+    {{ with .OutputFormats.Get "rss" }}
+        {{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+    {{ end }}
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
