--- a/themes/neopost/layouts/_default/single.html
+++ b/themes/neopost/layouts/_default/single.html
@@ -10,7 +10,7 @@
         <div class="post-heading-information">
             {{- if (index .Params "table-of-contents") }}
             <div id="post-toc-mobile">
-                <button id="post-toc-btn" class="dropbox-btn" onclick="toggleDropbox('post-toc')" >☰</button>
+                <button id="post-toc-btn" class="dropbox-btn" onclick="toggleDropbox('post-toc')" >≡</button>
                 <div id="post-toc" class="dropbox-content table-of-contents float">
                     {{ partial "toc.html" . }}
                 </div>
