--- a/themes/neopost/layouts/partials/style.css
+++ b/themes/neopost/layouts/partials/style.css
@@ -351,9 +351,9 @@ a:hover {
 }
 
 .small-box {
-    width: 100%;
+    width: 90%;
     align-self: center;
-    max-width: 240px;
+    margin: 10px;
     border: 2px solid var(--bg-color);
     line-height: 1.5rem;
 }
@@ -378,6 +378,7 @@ a:hover {
     background: var(--bg-color);
     border: 4px double var(--bg-color2);
     border-radius: 2em;
+    text-align: center;
 }
 
 #bio p { margin: 1em; }
@@ -501,12 +502,18 @@ header h1 a:hover {
 }
 
 .dropbox-btn {
+    font-size: 40px;
+    width: 1.5em;
     color: var(--link-color);
     font-weight: bold;
     background-color: var(--bg-color);
     /* border: 4px double var(--outline-color); */
-    border: 1px solid var(--outline-color);
+    border: 2px double var(--outline-color);
     /* padding: .5em 3em; */
+}
+
+.dropbox-btn:hover {
+    background-color: var(--select-color);
 }
 
 .dropbox-content[visible] {
@@ -608,12 +615,10 @@ header h1 a:hover {
         font-size: 24px;
     }
 
-    #bio {width: 50%;}
+    #bio {width: 90%;}
     
     #sidebar ul {
         line-height: 2em;
-        display: flex;
-        flex-wrap: wrap;
         gap: 1em;
     }
     #sidebar li {
@@ -635,10 +640,33 @@ header h1 a:hover {
     .post-heading-information {
         position: sticky;
         top: 0;
-        padding: 5px;
         z-index: 10;
         background-color: var(--bg-color2);
     }
+}
+
+/* https://css-tricks.com/snippets/css/typewriter-effect/ */
+.typewriter {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
 }
 
 </style>
